--- a/host/src/App.css
+++ b/host/src/App.css
@@ -136,6 +136,30 @@ flex-wrap: nowrap;
 
   
 }
+.box1>#select{
+  width: 100%;
+  margin: auto;
+
+  
+}
+.box1>#select>select{
+  width: 45%;
+  /* margin: auto; */
+  height: 40px;
+  font-size: 15px;
+  
+  font-family: IBM Plex Sans,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+  
+  /* margin-right: 10px; */
+}
+option{
+  border: none;
+  box-sizing: border-box;
+}
+#select1{
+  margin-right: 18px;
+  margin-left: 5px;
+}
 
 #range{
    appearance:unset;
@@ -200,38 +224,50 @@ input[type="range"]::-webkit-slider-runnable-track{
   width:60%;
   /* position: relative; */
   height:100%;
-  position: inherit;
+  /* position: static; */
+  /* position: inherit; */
   /* border: 2px solid black; */
   
 }
 
 #transperent-box{
-  display:block;
-  width: 45%;
-  height: 40%;
-  position:static;
-  
-  margin-top: -500px;
+  /* display:block; */
+ 
+ 
   margin-left: 50px;
  
-  background-color:  #CBDCCB;
+  
+  /* background-color: rgba(255, 255, 255, 0.616); */
+ display: inline-block;
+  margin-top: -700px;
   /* background: transparent; */
-  padding-top: 5px;
-  padding-left: 5px;
-  padding-bottom: 5px;
-  padding-right: 5px;
+ 
   /* opacity: 1; */
 
 }
-#transperent-box>p{
-  font-weight: 500;
+#first-box{
+  width: 60%;
+  height: 50%;
+  font-weight: 700;
   font-size: 40px;
-  
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  padding-right: 20px;
+  background-color: rgba(255, 255, 255, 0.616);
 
- 
 }
-#transperent-box>button{
+
+#empty-box{
+  height: 500px;
+  width: 400px;
+  background-color:red;
+  padding-top: 100px;
+  visibility: hidden;
+}
+#transperent-box>#first-box>button{
   -webkit-tap-highlight-color: transparent;
+  /* display: inline-block; */
   width: 130px;
   font-style: normal;
   font-weight: 400;
@@ -260,15 +296,93 @@ input[type="range"]::-webkit-slider-runnable-track{
 
 }
 
-
-
-#steps>img{
+#steps{
   width: 100%;
-  margin-top: 30px;
+  text-align: center;
+  margin: auto;
+  margin-top: -300px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  gap:20px;
+  background-color:rgb(245, 245, 245);
 }
-#whyShare>img{
-  width: 100%;
+#steps>p{
+  font-family: IBM Plex Sans;
+  margin-bottom: 70px;
+}
+.font{
+  font-weight: 600;
+   font-size: 18px;
+   /* color: black; */
+}
+.font ~ p{
+  font-size: 13px;
+    font-weight: 450;
+    /* text-align: center; */
+    margin-bottom: 0;
+    color: #1f1f1f ;
+}
+
+#steps>div{
+  width: 90%;
+ display: flex;
+ flex-wrap: nowrap;
+ margin: auto;
+ margin-top: 30px;
+}
+#steps>div>div{
+  width: 30%;
+  margin: auto;
+}
+hr{
+  width: 60%;
+  margin: auto;
+  margin-bottom: -70px;
+  border: none;
+  border-top: 1px dashed black;
+
+  
+
+}
+
+
+#steps>div>div>div{
+  background-color: rgb(255, 255, 255);
+ 
+  width:80px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 50%;
+  margin: auto;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+#earn{
+  height: 50px;
+}
+
+#whyShare{
+  width: 90%;
+  margin: auto;
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
   margin-top: 70px;
+  align-self: start;
+  
+ 
+}
+#whyShare>div{
+  /* height: 800px; */
+  margin-bottom: 60px;
+  width: 30%;
+}
+#why {
+  font-size: 44px;
+  font-weight:600;
+  margin-right: -10px;
+  /* color:rgba(211, 211, 211, 0.521); */
+  color: rgb(192, 192, 192);
+  margin-top: -20px;
 }
 
 
@@ -278,4 +392,76 @@ input[type="range"]::-webkit-slider-runnable-track{
   width: 80%;
   margin-left: 10%;
   
+}
+#videos{
+  
+  margin-bottom: 40px;
+  text-align: center;
+ 
+}
+#videos>div{
+  width: 80%;
+  margin:auto;
+  display: flex;
+  flex-wrap: nowrap;
+  gap:20px
+ 
+ 
+
+}
+
+#videos>p{
+  font-family: IBM Plex Sans;
+  margin-bottom: 70px;
+  text-align: center;
+}
+#videos>div>div{
+  width: 30%;
+  height: 340px;
+  margin:auto;
+  /* border:1px solid black; */
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+
+}
+.video{
+  width:90%;
+  height: 50px;
+  margin: auto;
+}
+.video>img{
+  width: 100%;
+  border-radius: 20px;
+}
+.play{
+  width:35px;
+  height: 33px;
+  margin: auto;
+  background-color: #10a310;
+  margin-top: 80px;
+  border-radius: 50%;
+  display: inline-block;
+  /* position: relative; */
+  cursor: pointer;
+  /* display: inline-block; */
+}
+.play>img{
+  margin: auto;
+  margin-left: 1px;
+}
+.subBox{
+  width: 300px;
+  margin: auto;
+  margin-left: -14px;
+  /* border: 1px solid black; */
+  height: 200px;
+  padding-top: 50px;
+  margin-top: -50px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 10px;
+   border-radius:  10px;
+   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
