--- a/host/src/App.css
+++ b/host/src/App.css
@@ -1,7 +1,10 @@
-#body {
+
+
+#page {
   margin: 0;
   font-family: IBM Plex Sans,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
   background-color: rgb(255, 255, 255);
+
 }
 /* navbar is started */
 #navbar{
@@ -121,6 +124,7 @@ flex-wrap: nowrap;
  
 }
 .box1>select{
+  -webkit-appearance: none;
   
 }
 .box1{
@@ -160,39 +164,25 @@ option{
   margin-right: 18px;
   margin-left: 5px;
 }
-
-#range{
-   appearance:unset;
-   color: -internal-light-dark(#10a310, rgb(255, 255, 255));
-  width: 90%;
-  margin-right: 15px;
-  height: 5px;
-  background: #10a310;
-  /* background: linear-gradient(to right, rgb(16, 163, 16) 43.3333%, rgb(224, 224, 224) 43.3333%); */
-   border-radius: 7px;
-  background-repeat: no-repeat 
-}
-
-
-input[type="range"]::-webkit-slider-runnable-track{
- 
+#main{
   
-  -webkit-appearance: none;
- background:transparent;
- border: none;
+  width:100%;
+  margin: auto;
 }
- 
- input[type="range"]::-webkit-slider-thumb{
-  -webkit-appearance: none;
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
-  background:#10a310;
-  /* transition: background .3s ease-in-out; */
-  /* cursor: ew-resize; */
 
+input[type="range"]{
+  appearance: unset;
+  width: 100%;
+  color: -internal-light-dark(#10a310, rgb(255, 255, 255));
+  background-color: #10a310;
+  height: 5px;
 
 }
+input[type="range"]::-webkit-slider-thumb{
+  
+  cursor: pointer;
+}
+
 
 .box2 {
   width:80%;
@@ -219,11 +209,15 @@ input[type="range"]::-webkit-slider-runnable-track{
   width: 100%;
   height:95%;
 }
-
 #box2{
-  width:60%;
+  width: 70%;
+  height: 680px;
+}
+#box2>img{
+  width:100%;
   /* position: relative; */
   height:100%;
+  position: static;
   /* position: static; */
   /* position: inherit; */
   /* border: 2px solid black; */
@@ -300,7 +294,7 @@ input[type="range"]::-webkit-slider-runnable-track{
   width: 100%;
   text-align: center;
   margin: auto;
-  margin-top: -300px;
+  margin-top: 50px;
   padding-top: 30px;
   padding-bottom: 30px;
   gap:20px;
@@ -366,35 +360,56 @@ hr{
   display: flex;
   flex-wrap: nowrap;
   gap: 20px;
-  margin-top: 70px;
+  margin-top: 100px;
   align-self: start;
   
  
 }
 #whyShare>div{
   /* height: 800px; */
+  /* border: 1px solid black; */
+  padding: -30px;
+  /* text-align: center; */
   margin-bottom: 60px;
   width: 30%;
+  
 }
+/* #why + div >#font{
+  margin-top: -20px;
+
+} */
 #why {
   font-size: 44px;
   font-weight:600;
-  margin-right: -10px;
+  margin-right: -30px;
   /* color:rgba(211, 211, 211, 0.521); */
   color: rgb(192, 192, 192);
   margin-top: -20px;
 }
+#why ~ div{
+  width: 25%;
+  text-align: justify;
+  margin-right: 10px;
+}
+#why #font{
+  margin-bottom: 5px;
+}
 
-
-
+#gift{
+  width: 90%;
+  margin: auto;
+  margin-top: 50px;
+}
 
 #gift>img{
-  width: 80%;
-  margin-left: 10%;
+  width: 100%;
+
+ 
   
 }
 #videos{
-  
+  width: 100%;
+  margin: auto;
   margin-bottom: 40px;
   text-align: center;
  
@@ -402,6 +417,7 @@ hr{
 #videos>div{
   width: 80%;
   margin:auto;
+  /* margin-left: -5px; */
   display: flex;
   flex-wrap: nowrap;
   gap:20px
@@ -412,7 +428,7 @@ hr{
 
 #videos>p{
   font-family: IBM Plex Sans;
-  margin-bottom: 70px;
+  margin-bottom: 40px;
   text-align: center;
 }
 #videos>div>div{
@@ -452,9 +468,9 @@ hr{
   margin-left: 1px;
 }
 .subBox{
-  width: 300px;
+  width:100%;
   margin: auto;
-  margin-left: -14px;
+  margin-left: -16px;
   /* border: 1px solid black; */
   height: 200px;
   padding-top: 50px;
@@ -465,3 +481,225 @@ hr{
    border-radius:  10px;
    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
+#body{
+  width: 100%;
+  background-color: #66666673;
+  margin-top: 0;
+  margin-bottom: 0;
+  scroll-behavior: initial;
+  
+  margin-left: 40px;
+}
+.sharing_is_earning{
+  font-size: 25px;
+
+}
+#youtube-video{
+  width: 60%;
+  
+  
+  position: absolute;
+  margin: auto;
+  align-items: center;
+  
+}
+#youtube-video::after{
+  position: fixed;
+
+}
+#body::after{
+  position: fixed;
+}
+
+#questions{
+  width: 92%;
+  margin: auto;
+  margin-top: 100px;
+  /* text-align: center; */
+}
+.question>img{
+  margin-right: 20px;
+  margin-left: 10px;
+}
+.question{
+  display: flex;
+  flex-wrap: nowrap;
+  width: 100%;
+  /* justify-content: space-between; */
+  margin: auto;
+  border: 1px solid black;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: -15px;
+  border-color: lightgrey;
+  
+
+}
+#questions>p{
+  /* margin-left: -150px; */
+  text-align: center;
+  -webkit-tap-highlight-color: transparent;
+  font-style: normal;
+  user-select: none;
+  -webkit-font-smoothing: antialiased;
+  font-family: IBM Plex Sans;
+  box-sizing: inherit;
+  padding: 30px 0;
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.43;
+  letter-spacing: 1.2px;
+  color: #666;
+  opacity: .6;
+  text-transform: uppercase;
+}
+.question>p{
+  font-size: 14px;
+  width: 80%;
+    font-weight: 500;
+    line-height: 1.14;
+    cursor: pointer;
+}
+#questions>div{
+  /* width: 90%; */
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap:10px;
+  margin: auto;
+  margin-left: -20px;
+  
+  /* border:1px solid black; */
+}
+
+#questions>div>div{
+  width: 90%;
+  margin: auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: -5px;
+  border: 1px solid black;
+  border: inherit;
+}
+.host-questions-accordion-block-header-arrow-container{
+      color: #383838;
+    align-items: flex-end;
+    position: absolute;
+    -webkit-tap-highlight-color: transparent;
+    font-style: normal;
+    user-select: none;
+    -webkit-font-smoothing: antialiased;
+    font-family: IBM Plex Sans;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.14;
+    cursor: pointer;
+    box-sizing: inherit;
+    height: 10px;
+    width: 20px;
+    margin-right: 0px;
+    justify-content: flex-end;
+    justify-items: end;
+    margin-left: 420px;
+    margin-right: 0;
+    /* padding-top: 20px; */
+}
+
+.host-questions-accordion-block-header-arrow-container>img{
+  width:80%;
+  height: 100%;
+  margin-top: 20px;
+  margin-left: 100px;
+}
+#confused{
+  margin-top: 50px;
+}
+
+#confused>p:nth-child(1){
+  color: silver;
+  font-size: 13px;
+  margin-left: 65px;
+}
+#confused>p:nth-child(2){
+  color: black;
+  font-size: 13px;
+  font-weight: 400;
+  margin-left: 65px;
+}
+#confused>p:nth-child(3){
+  color: #10a310;
+  font-weight: 500;
+  margin-left: 65px;
+}
+
+#bottom{
+  width: 100%;
+  height: 100px;
+  font-weight: 400;
+    font-size: 16px;
+ 
+
+ color:silver;
+  
+  padding-left: 90px;
+  padding-top: 20px;
+  padding-bottom: 70px;
+  margin-top: 50px;
+  /* margin-bottom: 50px; */
+  
+  background-color: whitesmoke;
+}
+#bottom>img{
+  margin-top:20px;
+  
+}
+#details{
+  width: 85%;
+
+  margin:auto;
+  padding-top: 30px;
+  box-sizing: inherit;
+
+
+  
+
+}
+#details>div>p{
+  font-size: 13px;
+
+}
+
+#More{
+  width: 85%;
+  margin-top: -50px;
+  margin: auto;
+  display: flex;
+  flex-wrap: nowrap;
+  scroll-margin-bottom: 0px;
+  justify-content: space-between;
+}
+#More>img{
+ 
+  
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.14;
+  cursor: pointer;
+  box-sizing: inherit;
+  height: 10px;
+  width: 20px;
+  margin-top: 30px;
+}
+#More>p{
+  font-size: 16px;
+  
+    font-weight: 500;
+    line-height: 1.14;
+    cursor: pointer;
+}
+
+
+
+
+
